movie recommendation function implenmented

--- a/MovieMate/MovieMateLogic.ipynb
+++ b/MovieMate/MovieMateLogic.ipynb
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "6fa875a3",
+   "id": "eac75dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "1cee1e5b",
+   "id": "014d8a5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "d41ad313",
+   "id": "a98067d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "8247668e",
+   "id": "fc8a62fa",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "8332f97a",
+   "id": "5d550158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "004c3292",
+   "id": "da43e743",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "e86ae345",
+   "id": "f9ef6d4d",
    "metadata": {},
    "outputs": [
     {
@@ -1645,14 +1645,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "6c41c80f",
+   "execution_count": 185,
+   "id": "b637aa30",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Finally we have the function that recommends similar movies when a movie is passed through as an argument\n",
+    "def recommendMovie(movie):\n",
+    "    # finds the index of the movie in the data frame based on its title\n",
+    "    titleIndex = recDataFrame[recDataFrame['title'] == movie].index[0]\n",
+    "    # Array containing the cosine similarity scores between the input movie and all other movies in the dataset\n",
+    "    cosScores = cosSimilarity[titleIndex]\n",
     "\n",
+    "    # Sorts the indices of movies based on their cosine similarity scores in descending order\n",
+    "    indices = sorted(range(len(cosScores)), reverse=True, key=lambda i: cosScores[i])[1:11]\n",
+    "\n",
+    "    # Print titles of the recommended movies\n",
+    "    for i in indices:\n",
+    "        print(recDataFrame.iloc[i]['title'])\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "ef07e539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantum of Solace\n",
+      "Never Say Never Again\n",
+      "Skyfall\n",
+      "From Russia with Love\n",
+      "Dr. No\n",
+      "Die Another Day\n",
+      "Thunderball\n",
+      "You Only Live Twice\n",
+      "Goldfinger\n",
+      "On Her Majesty's Secret Service\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommendMovie('Spectre')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "836530eb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
